--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "wolt-task",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "vitest --environment jsdom"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "ts-node": "^10.9.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -25,8 +26,8 @@
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.14",
-    "@types/jquery": "^3.5.32",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/mocha": "^10.0.10",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -38,14 +39,12 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^26.0.0",
     "postcss": "^8.4.49",
     "prettier": "3.4.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.20.0",
-    "vite": "^6.0.5",
     "vitest": "^2.1.8"
   }
 }
