--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "axios": "^1.7.9",
     "lodash.debounce": "^4.0.8",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-geolocated": "^4.3.0",
     "react-hook-form": "^7.54.2",
+    "react-lottie": "^1.2.10",
     "ts-node": "^10.9.2",
     "zustand": "^5.0.3"
   },
@@ -50,6 +52,7 @@
     "prettier": "3.4.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
-    "vitest": "^2.1.8"
+    "vitest": "^2.1.8",
+    "vitest-canvas-mock": "^0.3.3"
   }
 }
