--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-geolocated": "^4.3.0",
+    "react-hook-form": "^7.54.2",
     "react-lottie": "^1.2.10",
     "ts-node": "^10.9.2",
     "zustand": "^5.0.3"
