--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,10 @@ jobs:
         with:
           node-version: 18
 
+      - name: Create .env file
+        run: |
+          echo VITE_BASE_URL=${{ secrets.VITE_BASE_URL }} > .env
+
       - name: Install dependencies
         run: npm install
 
