--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-geolocated": "^4.3.0",
     "react-hook-form": "^7.54.2",
     "react-lottie": "^1.2.10",
-    "ts-node": "^10.9.2",
-    "zustand": "^5.0.3"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
